Fix spacing above closed polls section

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -694,6 +694,7 @@ button[disabled]{
 
   .landingPageButton:hover {
     background: rgb(212, 216, 233);
+    cursor: pointer;
   }
 
   div.poll span.pollClosingDate {
